mType/tests/testFiles/nameSpace/pass/basicNamespace.mt
namespace math {
    function add(int a, int b): int {
        return a + b;
    }
}

int result = math::add(5, 7);
print(result);
print("Test passed");